--- a/src/app/modules/favorites/pages/favorite-page/favorite-page.component.html
+++ b/src/app/modules/favorites/pages/favorite-page/favorite-page.component.html
@@ -1,1 +1,4 @@
-<p>favorite-page works!</p>
+<div class="">
+  <app-play-list-header></app-play-list-header>
+  <app-play-list-body></app-play-list-body>
+</div>
