--- a/src/app/shared/components/card-player/card-player.component.css
+++ b/src/app/shared/components/card-player/card-player.component.css
@@ -55,13 +55,13 @@
 .card-player.player-big {
   position: relative;
   flex-direction: column;
-  height: 18rem;
+  height: 85%;
   padding: 1rem;
 }
 
 .card-player.player-big .cover {
   width: 100%;
-  height: 200px;
+  height: 50%;
   border-radius: var(--border-radius-1);
 }
 
