--- a/src/app/modules/auth/pages/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/pages/auth-page/auth-page.component.html
@@ -28,7 +28,7 @@
           <div class="form-steps">
               <a class="link" href="">¿Se te ha olvidado la contraseña?</a>
           </div>
-          <div *ngIf="errorSession">
+          <div id="error" *ngIf="errorSession">
               Ocurrio un error con tu email o password
           </div>
           <div class="form-action">
