--- a/src/app/modules/history/pages/history-page/history-page.component.html
+++ b/src/app/modules/history/pages/history-page/history-page.component.html
@@ -1,1 +1,4 @@
-<p>history-page works!</p>
+<div class="history-page">
+  <app-search></app-search>
+  <app-play-list-body></app-play-list-body>
+</div>
